# SmartShop_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: auth.py  cart.py  db.py  main.py  mockdata.py  queryhandler.py  speech_recognition_handler.py
frontend/: main.py
